--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,11 @@ body {
     @media (max-width: 600px){
       margin-top: 80px;
     }
+
+    a{
+      text-decoration: none;
+      color: inherit;
+    }
   }
 
 
