--- a/blogPages/BlogStyle.css
+++ b/blogPages/BlogStyle.css
@@ -172,9 +172,9 @@ textarea {
 }
 
 @media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
 }
 
@@ -255,7 +255,7 @@ body {
   h3 {
     font-weight: bold;
     text-align: center;
-    margin-bottom: 0;
+    margin-bottom: 8px;
     margin-top: 16px;
 
     @media (max-width: 600px){
@@ -317,6 +317,12 @@ body {
 
     a {
       color: inherit;
+      padding: 2px;
+    }
+
+    p{
+      color: black;
+      font-family: monospace;
       padding: 2px;
     }
 
