--- a/css/style.css
+++ b/css/style.css
@@ -404,6 +404,85 @@ body {
   }
 
 
+
+  .photopile {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    max-width: 720px;
+    margin: 0 auto;
+  }
+  .photopile figure {
+    display: inline-block;
+    background: white;
+    box-shadow: 0 0 0.4rem rgb(0,0,0,0.75);
+    transform: rotate(2deg);
+    margin: 0 -25px;
+
+  }
+  .photopile figure img {
+    max-width: calc(100% - 2rem);
+    margin: 1rem 1rem 0 1rem;
+    border: 2px rgb(0,0,0,0.55) inset;
+
+
+  }
+  .photopile figcaption, .popovers figcaption {
+    font-family: monospace/* set this to have it match the rest of the page */;
+    text-align: center;
+    margin: 0.5rem 1rem 1rem 1rem;
+    font-size: 1rem;
+    color: black;
+  }
+  .photopile button {
+    background: none;
+    border: none;
+    max-width: 40%;
+  }
+  .photopile button:hover, .photopile button:focus {
+    z-index: 3;
+    cursor:pointer;
+  }
+  .photopile button:nth-child(2n) {
+    transform: rotate(-10deg);
+  }
+  .photopile button:nth-child(3n) {
+    transform: rotate(5deg);
+  }
+  .photopile button:nth-child(4n) {
+    transform: rotate(4deg);
+  }
+  .photopile button:nth-child(5n) {
+    transform: rotate(-2deg);
+  }
+  .photopile button:nth-child(6n) {
+    transform: rotate(-7deg);
+  }
+  :popover-open {
+    border: none;
+    box-shadow: 0 0 0.4rem rgb(0,0,0,0.75);
+    position: fixed;
+    top: 50vh;
+    left: 50vw;
+    transform: translate(-50%,-50%);
+  }
+  .popovers figure:popover-open {
+    display: block;
+    background: white;
+  }
+  .popovers figure:popover-open figcaption {
+    margin: 2.5vmin 1rem 4vmin 1rem;
+    font-size: 175%;
+    color: black;
+  }
+  .popovers figure:popover-open img {
+    margin: 4vmin 4vmin 0 4vmin;
+    width: 80vmin;
+    border: 4px rgb(0,0,0,0.55) inset;
+  }
+
+
 }
 
 
