--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,7 @@ body {
     max-width: 720px;
     margin: 0 auto;
   }
+
   .photopile figure {
     display: inline-block;
     background: white;
@@ -420,11 +421,22 @@ body {
     transform: rotate(2deg);
     margin: 0 -25px;
 
+    &:hover{
+
+      box-shadow: 0 0 0.6rem rgb(60, 58, 61);
+
+    }
+
   }
+
   .photopile figure img {
     max-width: calc(100% - 2rem);
     margin: 1rem 1rem 0 1rem;
     border: 2px rgb(0,0,0,0.55) inset;
+    object-fit: cover;
+    object-position: center;
+    height: 200px;
+    width: 200px;
 
 
   }
@@ -434,6 +446,7 @@ body {
     margin: 0.5rem 1rem 1rem 1rem;
     font-size: 1rem;
     color: black;
+    max-width: 200px;
   }
   .photopile button {
     background: none;
